--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "typeorm": "^0.3.15",
+    "useragent": "^2.3.0",
     "ws": "^8.14.2"
   },
   "devDependencies": {
@@ -60,6 +61,7 @@
     "@types/jest": "29.5.0",
     "@types/node": "18.15.11",
     "@types/supertest": "^2.0.11",
+    "@types/useragent": "^2.3.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
