--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/websockets": "^7.6.15",
     "@types/cookie-parser": "^1.4.3",
     "@types/passport-jwt": "^3.0.8",
+    "axios": "^1.6.2",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "class-transformer": "^0.5.1",
@@ -41,10 +42,12 @@
     "cookie-parser": "^1.4.6",
     "debug": "^4.3.4",
     "dotenv": "^16.0.3",
+    "express-session": "^1.17.3",
     "helmet": "^6.1.5",
     "ioredis": "^5.3.2",
     "mysql2": "^3.2.4",
     "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "path": "^0.12.7",
     "reflect-metadata": "^0.1.13",
@@ -58,8 +61,10 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.4.0",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.10",
     "@types/jest": "29.5.0",
     "@types/node": "18.15.11",
+    "@types/passport-google-oauth20": "^2.0.14",
     "@types/supertest": "^2.0.11",
     "@types/useragent": "^2.3.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
