--- a/package.json
+++ b/package.json
@@ -65,8 +65,10 @@
     "@types/jest": "29.5.0",
     "@types/node": "18.15.11",
     "@types/passport-google-oauth20": "^2.0.14",
+    "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.11",
     "@types/useragent": "^2.3.4",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
